# ai-review-assistant

./: .env.example  .gitignore  CONTEXT.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 002_add_folders.py  005_add_study_progress.py  007_add_courses_and_processing_lifecycle.py  008_add_practice_attempts.py  009_add_knowledge_trust_fields.py  010_add_usage_and_chat_idempotency.py
apps/api/src/review_assistant/: __init__.py  main.py
apps/api/src/review_assistant/application/: __init__.py
apps/api/src/review_assistant/application/chat/: __init__.py  jobs.py  service.py
apps/api/src/review_assistant/application/courseware/: __init__.py  extractor.py
apps/api/src/review_assistant/core/: __init__.py  config.py
apps/api/src/review_assistant/domain/: __init__.py  budget.py  course.py  idempotency.py  study_progress.py
apps/api/src/review_assistant/infrastructure/: __init__.py
apps/api/tests/application/: test_chat_context.py  test_chat_jobs.py  test_grading.py  test_homework_concurrency.py  test_homework_jobs.py  test_homework_matcher.py  test_ingestion_preflight.py
apps/api/tests/domain/: test_budget.py  test_course.py  test_idempotency.py  test_study_progress.py
apps/api/tests/infrastructure/: test_embedding_response.py  test_metered_ai_client.py  test_migrations.py  test_text_chunk_pages.py  test_token_counter_queue.py
apps/api/tests/interfaces/: test_http_contract.py  test_progress_lock.py
(+152 files in other folders)
