[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "finals-review-assistant-api"
version = "0.2.0"
description = "Single-user, course-scoped AI review assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pgvector>=0.3,<1.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.12,<1.0",
  "httpx>=0.27,<1.0",
  "openai>=1.0,<2.0",
  "anthropic>=0.39,<1.0",
  "numpy>=2.1,<2.2",
  "tiktoken>=0.7,<1.0",
  "jieba>=0.42,<1.0",
  "python-pptx>=0.6,<1.0",
  "python-docx>=1.0,<2.0",
  "PyMuPDF>=1.24,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
